--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,22 +1,52 @@
+@font-face {
+  font-family: "notasans";
+  src: url("../fonts/NotoSans-Medium.ttf");
+}
+
+@font-face {
+  font-family: "notasans-bold";
+  src: url("../fonts/NotoSans-Bold.ttf");
+}
+
+:root {
+  --primary-green: aquamarine;
+  --tertiary-green: rgb(19, 83, 40);
+  --secondary-green: rgb(16, 168, 115);
+  --fontsmall: 1rem;
+}
+
+
 .html, .body{
     margin: 0px;
     padding: 0px;
+    width: 100vw;
+    font-family: "notasans";
+}
+
+
+.line {
+  border-top: 1px solid rgb(20, 1, 1);
+  width: 80vmin;
+  margin-bottom: 2px;
 }
 
 .App {
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-color: aquamarine;
     min-height: 100vh;
+    align-items: center;
+    font-family: "notasans";
+    width: 100%;
+    background-color: rgb(228, 225, 225);
   }
   
   
   .App-header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
     padding: 10px;
+    width: 100%;
   }
   .App-logo {
     width: 20vmin;
@@ -24,9 +54,9 @@
   }
   
   .app-title{
-    font-size: 2rem;
+    font-size: calc(var(--fontsmall)*2);
     font-weight: 600;
-    padding-right: 10px;
+    color: var(--tertiary-green);
   }
   
   .detect-tools{
@@ -43,7 +73,13 @@
     box-shadow: 0 4px 8px 0 rgba(53, 48, 48, 0.2);
     transition: 0.3s;
   }
-  .breast-cancer .liver-segmentation{
-    padding: 0;
-  }
- 
+ .card{
+     margin-bottom: 20px;
+ }
+
+ .tool-title{
+   margin: 5vmin 0;
+   color: var(--tertiary-green);
+   font-family: "notasans-bold";
+   font-size: calc(var(--fontsmall)*1.5);
+ }
