--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,17 @@
 </head>
 <body>
     <div class="App">
-        <header class="App-header">
-            <div>
-                <a href="{% url 'about' %}"><img src= "{% static 'images/logo.jpg' %}" class="App-logo" alt="logo" /></a>
-            </div>
-            <div class="app-title">DOC'S PAL</div>
-        </header>
+        {% include 'partials/nav.html' %}
 
         <div class='detect-tools'>
             <div class='breast-cancer card'>
                     <div class='card-image'>
-                        <a href="{% url 'about' %}"><img src = "{% static 'images/breastcancer.gif' %}" alt="breastcancer"/></a>
+                        <a href="{% url 'breastCancer' %}"><img src = "{% static 'images/breastcancer.gif' %}" alt="breastcancer"/></a>
                     </div>
             </div>
             <div class='liver-segmentation card'>
                     <div class='card-image'>
-                        <a href="{% url 'about' %}"><img src = "{% static 'images/liver.gif' %}" alt="liver segmentation" /></a>
+                        <a href="{% url 'liverSegment' %}"><img src = "{% static 'images/liver.gif' %}" alt="liver segmentation" /></a>
                     </div>
             </div>
          </div>
