--- a/templates/testfile.html
+++ b/templates/testfile.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breast Cancer</title>
+    <title>TESTFILE</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    JUST A TEST FILE
 </body>
 </html>
