--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,7 +4,7 @@
     <!-- <div>
         <a href="{% url 'test' %}"><img src= "{% static 'images/logo.jpg' %}" class="App-logo" alt="logo" /></a>
     </div> -->
-    <div class="app-title">DOC'S PAL</div>
+    <a href="{% url 'Homepage' %}"><div class="app-title">DOC'S PAL</div></a>
 </header>
 <div class="line"></div>
 <div class="line"></div>
