--- a/firstPage/static/css/index.css
+++ b/firstPage/static/css/index.css
@@ -16,10 +16,10 @@
 }
 
 
-.html, .body{
+html, body{
     margin: 0px;
     padding: 0px;
-    width: 100vw;
+    height: 100%;
     font-family: "notasans";
 }
 
@@ -34,10 +34,9 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100%;
     align-items: center;
     font-family: "notasans";
-    width: 100%;
     background-color: rgb(228, 225, 225);
   }
   
