added aboutus nav

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -10,10 +10,14 @@
         <li class="nav-item home">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">About Us</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Diagnosis
           </a>
+          
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Model1</a></li>
             <li><a class="dropdown-item" href="#">Model2</a></li>
