added urls for models

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -19,8 +19,8 @@
           </a>
           
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'breastCancer' %}">Model1</a></li>
-            <li><a class="dropdown-item" href="{% url 'liverSegment' %}">Model2</a></li>
+            <li><a class="dropdown-item" href="{% url 'breastCancer' %}">Breast Cancer detection</a></li>
+            <li><a class="dropdown-item" href="{% url 'brainTumor' %}">Brain Tumor Detection</a></li>
           </ul>
         </li>
       </ul>
