--- a/templates/home.html
+++ b/templates/home.html
@@ -3,14 +3,10 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  {% include 'partials/bootstrapheader.html' %}
+  <link rel="stylesheet" href="{% static 'css/home.css' %}">
   <title>DocsPal</title>
 </head>
 <style>
