--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,14 +1,14 @@
 {% load static %}
 <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #ffffff00;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">DocsPal</a>
+    <a class="navbar-brand" href="{% url 'Homepage' %}">DocsPal</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item home">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'Homepage' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="#">About Us</a>
