--- a/static/css/common.css
+++ b/static/css/common.css
@@ -101,12 +101,12 @@
   .navbar-light .navbar-nav .nav-link{
     color: white;
   }
-
+/* 
   .navbar-light .navbar-nav .nav-link:focus,
   .navbar-light .navbar-nav .nav-link:hover {
-    color: white;
+    color: rgba(0, 0, 0, .7);
   
-  }
+  } */
   
   .oval-img {
     position: absolute;
