--- a/templates/brainTumor.html
+++ b/templates/brainTumor.html
@@ -60,12 +60,12 @@
         {% include 'partials/nav.html' %}
         <div class="jumbotron">
             <div class="form container">
-                <form action="liverSegmentation" method="POST" enctype="multipart/form-data">
+                <form action="predictTumor" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
 
                     <div class="mb-4">
                         <label for="formFile" class="form-label">Brain Tumor Detection</label>
-                        <input class="form-control" type="file" id="formFile">
+                        <input class="form-control" type="file" id="formFile" name="imgfile">
                     </div>
                     <div class="submit-btn">
                         <input type="submit" class="button-6" value="Submit">
