added file upload validation (frontend)

--- a/templates/brainTumor.html
+++ b/templates/brainTumor.html
@@ -68,7 +68,7 @@
                         <input class="form-control" type="file" id="formFile" name="imgfile">
                     </div>
                     <div class="submit-btn">
-                        <input type="submit" class="button-6" value="Submit">
+                        <input type="submit" class="btn btn-light" id="submit-btn" value="Submit">
                     </div>
                 </form>
             </div>
@@ -84,8 +84,31 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $('#formFile').change(
+            function () {
+                var fileExtension = ['png', 'jpg', 'jpeg'];
+                if ($.inArray($(this).val().split('.').pop().toLowerCase(), fileExtension) == -1) {
+                    alert("Only '.png', '.jpg' and '.jpeg' format is allowed.");
+                    this.value = ''; // Clean field
+                    return false;
+                }
+            });
+
+        $("#submit-btn").on("click", function (e) {
+            
+            if (document.getElementById("formFile").files.length === 0) {
+                e.preventDefault();
+                alert('Please Upload File');
+            }
+        
+        });
+    </script>
 </body>
 
 </html>
