--- a/static/css/common.css
+++ b/static/css/common.css
@@ -101,12 +101,16 @@
   .navbar-light .navbar-nav .nav-link{
     color: white;
   }
-/* 
+
   .navbar-light .navbar-nav .nav-link:focus,
   .navbar-light .navbar-nav .nav-link:hover {
-    color: rgba(0, 0, 0, .7);
+    color: white;
   
-  } */
+  }
+
+  .navbar-color{
+    background-color: aqua;
+  }
   
   .oval-img {
     position: absolute;
