--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #ffffff00;">
+<nav class="navbar navbar-expand-md fixed-top navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'Homepage' %}">DocsPal</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
