--- a/firstPage/static/css/common.css
+++ b/firstPage/static/css/common.css
@@ -1,22 +1,4 @@
-@font-face {
-    font-family: "PTSerif-Regular";
-    src: url("../fonts/PTSerif-Regular.ttf");
-  }
-  
-  @font-face {
-    font-family: "PTSerif-Bold";
-    src: url("../fonts/PTSerif-Bold.ttf");
-  }
-  
-  @font-face {
-    font-family: "PTSerif-BoldItalic";
-    src: url("../fonts/PTSerif-BoldItalic.ttf");
-  }
-  
-  @font-face {
-    font-family: "PTSerif-Italic";
-    src: url("../fonts/PTSerif-Italic.ttf");
-  }
+
   
   :root {
     --primary-green: aquamarine;
@@ -32,7 +14,7 @@
     padding: 0;
     width: 100%;
     height: 100%;
-    font-family: 'PTSerif-Regular';
+    font-family: 'MavenPro-Regular';
   }
   
   .parent-size {
@@ -107,7 +89,8 @@
     color: white;
   
   }
-  
+
+
   .oval-img {
     position: absolute;
     right: 0;
