--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,7 +1,9 @@
 {% load static %}
 <nav class="navbar navbar-expand-md fixed-top navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'Homepage' %}">DocsPal</a>
+    <a class="navbar-brand" href="{% url 'Homepage' %}">
+      <img src="{% static 'images/logo.svg' %}" width="50" height="50" />
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
