removed font-face declarations

--- a/templates/partials/bootstrapheader.html
+++ b/templates/partials/bootstrapheader.html
@@ -1,5 +1,18 @@
 <!-- Bootstrap CSS -->
 {% load static %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <style>
+        @font-face {
+          font-family: 'MavenPro-Bold';
+          src: local('MavenPro-Bold'),
+               url("{% static 'fonts/MavenPro-Bold.ttf' %}") format("truetype");
+        }
+        @font-face {
+          font-family: 'MavenPro-Regular';
+          src: local('MavenPro-Regular'),
+               url("{% static 'fonts/MavenPro-Regular.ttf' %}") format("truetype");
+        }
+      </style>
 <link rel="stylesheet" href="{% static 'css/common.css' %}">
